--- a/Taxopark/src/main/resources/application.properties
+++ b/Taxopark/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8081
+
+spring.jackson.serialization.indent_output=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/taxopark
+spring.datasource.username=postgres
+spring.datasource.password=1923
+
+spring.datasource.driverClassName=org.postgresql.Driver
 
